Fix flex wrap

--- a/great-idea/css/index.css
+++ b/great-idea/css/index.css
@@ -151,6 +151,7 @@ a {
   .innovation {
 	display:flex;
 	flex-direction: column;
+	flex-wrap: wrap;
 	align-items: center;
 	width: 300px;
 	text-align: center;
